--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,6 +25,8 @@ services:
       - CABOT_NAME
       - CABOT_BLE_ADAPTOR
       - CABOT_START_AT_LAUNCH
+      - CABOT_ACE_BATTERY_PORT
+      - CABOT_ACE_BATTERY_BAUD
 # required for display, device, and systemctl
     privileged: true
 # device, bluetooth
