--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -37,6 +37,7 @@ services:
       - LIDAR_IF
       - LIDAR_IP
       - MICRO_CONTROLLER
+      - LANG
 # required for display, device, and systemctl
     privileged: true
 # device, bluetooth
