fix for three realsense camera configuration

--- a/.env
+++ b/.env
@@ -35,3 +35,8 @@
 
 # specify Arduino or ESP32
 #MICRO_CONTROLLER=Arduino
+
+
+# optional variables for jetson connection
+#CABOT_USER_NAME=cabot
+#CABOT_ID_FILE=id_ed25519_cabot
