--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "cabot-device-check"]
 	path = cabot-device-check
-	url = https://github.com/cmu-cabot/cabot-device-check.git
+	url = git@github.com:cmu-cabot/cabot-device-check.git
