improve dbus ble-server implementation - check if it is using LE mode at launch time - add script to setup LE mode - toralant to bluetooth service restart or rfkill block - restart bluetooth service when it gets error

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,7 @@ services:
       - /run/dbus:/run/dbus
       - /run/udev:/run/udev:ro
       - /var/run/dbus:/var/run/dbus
+      - /etc/bluetooth/:/etc/bluetooth
 # for systemctl
       - /run/systemd/system:/run/systemd/system
       - /var/run/dbus/system_bus_socket:/var/run/dbus/system_bus_socket
