revert changes in .env

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 #
 
 # cabot name, this should be identical
-CABOT_NAME=gt2
+#CABOT_NAME=gt1
 
 # set 1 for launching cabot service at startup of cabot_ble.py
 #CABOT_START_AT_LAUNCH=0
