--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -45,6 +45,7 @@ services:
       - LIDAR_IP
       - MICRO_CONTROLLER
       - LANG
+      - CABOT_APP_USE_TCP
 # required for display, device, and systemctl
     privileged: true
 # device, bluetooth
