--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -37,4 +37,10 @@
 	// Uncomment to connect as a non-root user if you've added one. See https://aka.ms/vscode-remote/containers/non-root.
 	// "remoteUser": "vscode"
 
+	"overrideCommand": true,
+
+	"mounts": [
+		"source=./,target=/home/developer/dev,type=bind,consistency=cached"
+	]
+
 }
