Add config to power off remote hosts by power off button
DCO 1.1 Signed-off-by: Tatsuya Isihara <tisihara@jp.ibm.com>

--- a/.env
+++ b/.env
@@ -27,6 +27,9 @@
 # specify jetson mate config. expects a config which is provided for cabot
 #CABOT_JETSON_CONFIG="D:192.168.1.51:rs1 D:192.168.1.52:rs2 D:192.168.1.53:rs3"
 
+# specify remote hosts in the order to power off by the power off button
+#CABOT_REMOTE_POWEROFF_CONFIG
+
 ## optional variables but check speed will up if provided
 # network interface name which the lidar connected to
 #LIDAR_IF=enp8s0
