Fix config names to automatically shutdown Jetson
DCO 1.1 Signed-off-by: tatsuya-ishihara <tisihara@jp.ibm.com>

--- a/.env
+++ b/.env
@@ -24,8 +24,11 @@
 #CABOT_CAMERA_NAME_2
 #CABOT_CAMERA_NAME_3
 
+# User name to login jetson (default=cabot)
+#CABOT_JETSON_USER=cabot
 # specify jetson mate config. expects a config which is provided for cabot
-#CABOT_JETSON_CONFIG="D:192.168.1.51:rs1 D:192.168.1.52:rs2 D:192.168.1.53:rs3"
+# jetson hosts will be automaticallly shutdown in the written order
+#CABOT_JETSON_CONFIG="D:192.168.1.52:rs3 D:192.168.1.51:rs2 D:192.168.1.50:rs1"
 
 # specify remote hosts in the order to power off by the power off button
 #CABOT_REMOTE_POWEROFF_CONFIG
