Add config to power off remote hosts by power off button (#8)
* Add config to power off remote hosts by power off button

DCO 1.1 Signed-off-by: Tatsuya Isihara <tisihara@jp.ibm.com>

* Fix config names to automatically shutdown Jetson

DCO 1.1 Signed-off-by: tatsuya-ishihara <tisihara@jp.ibm.com>

* Update cabot-device-check, and change environment variable CABOT_USER_NAME to CABOT_JETSON_USER

DCO 1.1 Signed-off-by: Tatsuya Ishihara <tisihara@jp.ibm.com>

--- a/.env
+++ b/.env
@@ -24,8 +24,13 @@
 #CABOT_CAMERA_NAME_2
 #CABOT_CAMERA_NAME_3
 
+# user name to login jetson (default=cabot)
+#CABOT_JETSON_USER=cabot
+# ssh id file to connect jetson
+#CABOT_ID_FILE=id_ed25519_cabot
 # specify jetson mate config. expects a config which is provided for cabot
-#CABOT_JETSON_CONFIG="D:192.168.1.51:rs1 D:192.168.1.52:rs2 D:192.168.1.53:rs3"
+# jetson hosts will be automaticallly shutdown in the written order
+#CABOT_JETSON_CONFIG="D:192.168.1.52:rs3 D:192.168.1.51:rs2 D:192.168.1.50:rs1"
 
 ## optional variables but check speed will up if provided
 # network interface name which the lidar connected to
@@ -35,8 +40,3 @@
 
 # specify Arduino or ESP32
 #MICRO_CONTROLLER=Arduino
-
-
-# optional variables for jetson connection
-#CABOT_USER_NAME=cabot
-#CABOT_ID_FILE=id_ed25519_cabot
