fix for making the log report function workable
Signed-off-by: Daisuke Sato <daisukes@cmu.edu>

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,6 +25,9 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
 # for ssh in check_device_status.sh
       - ~/.ssh:/home/developer/.ssh
+# for log report
+      - /opt/report-submitter:/opt/report-submitter
+      - /opt/cabot/docker/home/.ros/log:/opt/cabot/docker/home/.ros/log
     environment:
       - CABOT_NAME
       - CABOT_BLE_ADAPTER
