--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -44,6 +44,7 @@ services:
       - CABOT_JETSON_CONFIG
       - CABOT_ID_DIR=/home/developer/.ssh
       - CABOT_ID_FILE
+      - CABOT_NO_BLE
       - LIDAR_IF
       - LIDAR_IP
       - MICRO_CONTROLLER
