use launch.sh for service start up
Signed-off-by: Daisuke Sato <daisukes@cmu.edu>

--- a/cabot-ble-server.service
+++ b/cabot-ble-server.service
@@ -2,7 +2,7 @@
 Description = CaBot BLE Server
 
 [Service]
-ExecStart = docker-compose up ble
+ExecStart = /opt/cabot-ble-server/launch.sh
 Restart = always
 WorkingDirectory = /opt/cabot-ble-server
 Type = simple
