mount and install for btusb
Signed-off-by: fukimiyazaki <f2miyazaki@lab.miraikan.jst.go.jp>

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,7 @@ services:
       - /run/udev:/run/udev:ro
       - /var/run/dbus:/var/run/dbus
       - /etc/bluetooth/:/etc/bluetooth
+      - /lib/modules:/lib/modules:ro
 # for systemctl
       - /run/systemd/system:/run/systemd/system
       - /var/run/dbus/system_bus_socket:/var/run/dbus/system_bus_socket
