modify for development on macos
Signed-off-by: Daisuke Sato <daisukes@cmu.edu>

--- a/.env
+++ b/.env
@@ -4,10 +4,10 @@
 #
 
 # cabot name, this should be identical
-#CABOT_NAME=gt1
+CABOT_NAME=gt1
 
 # do not launch BLE
-#CABOT_NO_BLE=true
+CABOT_NO_BLE=true
 
 # do not launch TCP
 #CABOT_NO_TCP=true
