--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,8 +24,8 @@ services:
 # for ssh in check_device_status.sh
       - ~/.ssh:/home/developer/.ssh
 # for log report
-      - /opt/report-submitter:/opt/report-submitter
-      - /opt/cabot/docker/home/.ros/log:/opt/cabot/docker/home/.ros/log
+#      - /opt/report-submitter:/opt/report-submitter
+#      - /opt/cabot/docker/home/.ros/log:/opt/cabot/docker/home/.ros/log
     environment:
       - CABOT_NAME
       - CABOT_BLE_ADAPTER
@@ -51,10 +51,12 @@ services:
       - LANG
       - RMW_IMPLEMENTATION=rmw_cyclonedds_cpp
 # required for display, device, and systemctl
-    privileged: true
+    # privileged: true
 # device, bluetooth
-    devices:
-      - /dev/dri
+    #devices:
+    #  - /dev/dri
 # device, bluetooth
-    network_mode: host
+    # network_mode: host
+    ports:
+      - 0.0.0.0:5001:5000
     command: ./cabot_app.py
