remove mount for device and systemctl
Signed-off-by: Daisuke Sato <daisukes@cmu.edu>

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,18 +3,18 @@ services:
     build: .
     volumes:
 # device, bluetooth
-      - /dev:/dev
-      - /sys/devices:/sys/devices
-      - /var/lib/bluetooth:/var/lib/bluetooth
-      - /run/dbus:/run/dbus
-      - /run/udev:/run/udev:ro
-      - /var/run/dbus:/var/run/dbus
-      - /etc/bluetooth/:/etc/bluetooth
-      - /lib/modules:/lib/modules:ro
+#      - /dev:/dev
+#      - /sys/devices:/sys/devices
+#      - /var/lib/bluetooth:/var/lib/bluetooth
+#      - /run/dbus:/run/dbus
+#      - /run/udev:/run/udev:ro
+#      - /var/run/dbus:/var/run/dbus
+#      - /etc/bluetooth/:/etc/bluetooth
+#      - /lib/modules:/lib/modules:ro
 # for systemctl
-      - /run/systemd/system:/run/systemd/system
-      - /var/run/dbus/system_bus_socket:/var/run/dbus/system_bus_socket
-      - /sys/fs/cgroup:/sys/fs/cgroup
+#      - /run/systemd/system:/run/systemd/system
+#      - /var/run/dbus/system_bus_socket:/var/run/dbus/system_bus_socket
+#      - /sys/fs/cgroup:/sys/fs/cgroup
 # for systemctl --user
       - /run/user:/run/user
       - ../cabot-device-check:/opt/cabot-device-check
