enable ARPSCAN_LIDAR to be set from env file
Signed-off-by: Fuki Miyazaki <f2miyazaki@lab.miraikan.jst.go.jp>

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -49,6 +49,7 @@ services:
       - CABOT_NO_TCP
       - LIDAR_IF
       - LIDAR_IP
+      - ARPSCAN_LIDAR
       - MICRO_CONTROLLER
       - LANG
 # required for display, device, and systemctl
