--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,3 @@
-version: "2.3"
-
-
 services:
   ble:
     build: .
@@ -52,6 +49,7 @@ services:
       - ARPSCAN_LIDAR
       - MICRO_CONTROLLER
       - LANG
+      - RMW_IMPLEMENTATION=rmw_cyclonedds_cpp
 # required for display, device, and systemctl
     privileged: true
 # device, bluetooth
