--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "cabot-device-check"]
 	path = cabot-device-check
 	url = git@github.com:cmu-cabot/cabot-device-check.git
+[submodule "cabot-common"]
+        path = cabot-common
+        url = git@github.com:cmu-cabot/cabot-common.git
+[submodule "report-submitter"]
+        path = report-submitter
+        url = git@github.com:cmu-cabot/report-submitter.git
