use rclpy instead of roslibpy (#31)
* import rclpy

Signed-off-by: t-hatakeyam <t.hatakeyama@kufusha.com>

* import rclpy

Signed-off-by: t-hatakeyam <t.hatakeyama@kufusha.com>

* import rclpy

Signed-off-by: t-hatakeyam <t.hatakeyama@kufusha.com>

* edit_Dockerfile

Signed-off-by: t-hatakeyam <t.hatakeyama@kufusha.com>

* publisher edit

Signed-off-by: t-hatakeyam <t.hatakeyama@kufusha.com>

* publisher edit

Signed-off-by: t-hatakeyam <t.hatakeyama@kufusha.com>

* publisher edit

Signed-off-by: t-hatakeyam <t.hatakeyama@kufusha.com>

* publisher Subscription edit

Signed-off-by: t-hatakeyam <t.hatakeyama@kufusha.com>

* error rclpy

Signed-off-by: t-hatakeyam <t.hatakeyama@kufusha.com>

* delete commentout

Signed-off-by: t-hatakeyam <t.hatakeyama@kufusha.com>

* thread error fix

Signed-off-by: t-hatakeyam <t.hatakeyama@kufusha.com>

* WIP: enable speak service to be executable

Signed-off-by: yushi-minemura <67675657+yushi-minemura@users.noreply.github.com>

* fix error caused by missing DBUS_SESSION_BUS_ADDRESS

Signed-off-by: yushi-minemura <67675657+yushi-minemura@users.noreply.github.com>

* fix topic name error

Signed-off-by: yushi-minemura <67675657+yushi-minemura@users.noreply.github.com>

* fix issue where exceptions were not being caught

Signed-off-by: yushi-minemura <67675657+yushi-minemura@users.noreply.github.com>

* fix typo

Signed-off-by: yushi-minemura <67675657+yushi-minemura@users.noreply.github.com>

* fix issue with unable to convert msg to dictionary

Signed-off-by: yushi-minemura <67675657+yushi-minemura@users.noreply.github.com>

* fix issues with diagnostic_agg_callback due to migration to ROS2

Signed-off-by: yushi-minemura <67675657+yushi-minemura@users.noreply.github.com>

* fix issue where service was not returning response

Signed-off-by: yushi-minemura <67675657+yushi-minemura@users.noreply.github.com>

* fix issue where ros2 threads do not stop on Ctrl+C

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -49,6 +49,7 @@ services:
       - ARPSCAN_LIDAR
       - MICRO_CONTROLLER
       - LANG
+      - RMW_IMPLEMENTATION=rmw_cyclonedds_cpp
 # required for display, device, and systemctl
     privileged: true
 # device, bluetooth
