add restart interval to avoid failure at start up
Signed-off-by: Daisuke Sato <daisukes@cmu.edu>

--- a/cabot-ble-server.service
+++ b/cabot-ble-server.service
@@ -4,6 +4,10 @@ Description = CaBot BLE Server
 [Service]
 ExecStart = /opt/cabot-ble-server/launch.sh
 Restart = always
+RestartSec=1s
+StartLimitBurst=5
+StartLimitInterval=10s
+
 WorkingDirectory = /opt/cabot-ble-server
 Type = simple
 
