update script for docker bake and launch - change tag from cabot-ble-server to cabot-app-server - tag image locally for docker compose - add option to launch.sh for production/development launch
Signed-off-by: Daisuke Sato <daisukes@cmu.edu>

--- a/docker-compose-prodimg.yaml
+++ b/docker-compose-prodimg.yaml
@@ -1,6 +1,6 @@
 services:
-  ble:
-    image: cmucal/cabot-ble-server
+  cabot-app-server:
+    image: cmucal/cabot-app-server
     volumes:
 # device, bluetooth
       - /dev:/dev
