--- a/.env
+++ b/.env
@@ -6,11 +6,11 @@
 # cabot name, this should be identical
 #CABOT_NAME=gt1
 
-# do not launch BLE
-#CABOT_NO_BLE=true
+# launch BLE (default false)
+#CABOT_USE_BLE=true
 
-# do not launch TCP
-#CABOT_NO_TCP=true
+# launch TCP (default true)
+#CABOT_USE_TCP=false
 
 # set 1 for launching cabot service at startup of cabot_ble.py
 #CABOT_START_AT_LAUNCH=0
