improve docker compose config and bake script
Signed-off-by: Daisuke Sato <daisukes@cmu.edu>

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,6 @@
 services:
   cabot-app-server:
+    image: cmucal/cabot-app-server
     build:
       context: ./docker/ros2
       additional_contexts:
